--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,10 @@
 
   norecursedirs = "deprecated/*"
 
+  # pytest-cov coverage reporting. open htmlcov/index.html in a browser for details
+  addopts = "--cov=src --cov-report=term --cov-report=html"
+  # PyCharm might not hit a breakpoint. For debugging, disable -cov by adding:
+  # –no-cov"
 
 #
 ### mypy #############################################################################
