--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,10 +84,14 @@
   norecursedirs = "deprecated/*"
 
   # pytest-cov coverage reporting. open htmlcov/index.html in a browser for details
-  # addopts = "--cov=src --cov-report=term --cov-report=html"
+  addopts = "--cov=src --cov-fail-under=5"
+  # to create an interactive local HTML report, add: --cov-report=html
   # to report missed lines during test writing, add: --cov-report=term-missing
   # PyCharm might not hit a breakpoint. For debugging, disable -cov by adding:
   # –no-cov"
+  cov_report = "term-missing"
+  # cov_report_term = "term-missing:skip-covered"
+  cov_report_xml = "coverage.xml"
 
 #
 ### mypy #############################################################################
