speed improvement options

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,12 +81,15 @@
   asyncio_default_fixture_loop_scope = "function"
   asyncio_mode = "auto"
 
+  testpaths = [
+    "tests/"
+  ]
   norecursedirs = "deprecated/*"
 
   # pytest-cov slows down our tests to 10 mins, so leave off.
   # We run coverage in a separate workflow on python 3.13 only (fastest)
   # pytest-cov coverage reporting. open htmlcov/index.html in a browser for details
-  # addopts = "--cov=src --cov-fail-under=50 --cov-report=xml --cov-report=term"
+  # addopts = ["--cov=src", "--cov-fail-under=50", "--cov-report=xml", "--cov-report=term"]
   # to create an interactive local HTML report, add: --cov-report=html
   # to report missed lines during test writing, add: --cov-report=term-missing
   # PyCharm might not hit a breakpoint. For debugging, disable -cov by adding:
@@ -97,14 +100,13 @@
 ### coverage #########################################################################
 
 [tool.coverage.run]
-branch = true
+# branch = true  # takes a lot longer
+# patch = ["subprocess"]
 
 source = [
     "src",
     "tests"
 ]
-#
-#patch = ["subprocess"]
 
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
