--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,8 +100,8 @@
 ### coverage #########################################################################
 
 [tool.coverage.run]
-# branch = true  # takes a lot longer
-# patch = ["subprocess"]
+branch = false  # true takes a lot longer
+patch = ["subprocess"]
 
 source = [
     "src",
