--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,7 +100,7 @@
 ### coverage #########################################################################
 
 [tool.coverage.run]
-branch = false  # true takes a lot longer
+branch = true  # takes a lot longer
 patch = ["subprocess"]
 
 source = [
