--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,10 +103,11 @@
 branch = true  # takes a lot longer
 patch = ["subprocess"]
 
-source = [
-    "src",
-    "tests"
-]
+source = ["."]
+#source = [
+#    "./src/*",
+#    "./tests/*"
+#]
 
 [tool.coverage.report]
 # Regexes for lines to exclude from consideration
