--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,16 +100,13 @@
 ### coverage #########################################################################
 
 [tool.coverage.run]
-core = "sysmon"
+core = "sysmon"  # essential setting for speed on GitHub < 11 secs instead of >12 mins
 branch = false  # true takes a lot longer and can't be combined with sysmon
 patch = ["subprocess"]
 
-#source = [
-#    "."
-#]
-
-omit = [
-    "*/test_binding_fsm.py"
+source = [
+    "src",
+    "tests"
 ]
 
 [tool.coverage.report]
