--- a/.github/workflows/check-cov.yml
+++ b/.github/workflows/check-cov.yml
@@ -52,7 +52,8 @@ jobs:
         run: coverage run -m pytest
 
       - name: Debug - Check if .coverage exists
-        run: test -f .coverage && echo ".coverage exists" || echo ".coverage does NOT exist"
+        run: ls
+        # run: test -f .coverage && echo ".coverage exists" || echo ".coverage does NOT exist"
 
       - name: Create coverage xml
         run: coverage xml
