--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,11 +102,10 @@
 [tool.coverage.run]
   core = "sysmon"  # essential setting for speed on GitHub < 11 secs instead of >12 mins
   branch = false  # true takes a lot longer and can't be combined with sysmon
-  patch = ["subprocess"]
-  data_file = ".coverage"
+#  patch = ["subprocess"]
   source = [
-    "src/",
-    "tests/"
+    "src",
+    "tests"
   ]
 
 [tool.coverage.report]
