--- a/.github/workflows/check-cov.yml
+++ b/.github/workflows/check-cov.yml
@@ -10,7 +10,7 @@ on:
       "tests/**",
     ]
 
-  pull_request_target:  # instead of pull_request
+  pull_request:  # no repeat on pull_request_target:
     branches: [ "master" ]
     paths: [
       ".github/workflows/check-cov.yml",
