--- a/.github/workflows/check-cov.yml
+++ b/.github/workflows/check-cov.yml
@@ -10,7 +10,7 @@ on:
       "tests/**",
     ]
 
-  pull_request:
+  pull_request_target:
     branches: [ "master" ]
     paths: [
       ".github/workflows/check-cov.yml",
@@ -21,7 +21,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  pull-requests: write
+  # pull-requests: write
   # issues: write
 
 jobs:
@@ -75,18 +75,18 @@ jobs:
           output: both
           thresholds: '60 80'
 
-      - name: Add Coverage PR Comment
-        # from: https://github.com/marketplace/actions/comment-pull-request
-        uses: thollander/actions-comment-pull-request@v3
-        with:
-          file-path: code-coverage-results.md
-          comment-tag: cov-report  # replaces existing by this name
-          # or: https://github.com/marketplace/actions/sticky-pull-request-comment
-          #        if: github.event_name == 'pull_request'
-          #        with:
-          #          recreate: true
-          #          path: code-coverage-results.md
-          # GITHUB_TOKEN is implicitly passed in
+#      - name: Add Coverage PR Comment
+#        # from: https://github.com/marketplace/actions/comment-pull-request
+#        uses: thollander/actions-comment-pull-request@v3
+#        with:
+#          file-path: code-coverage-results.md
+#          comment-tag: cov-report  # replaces existing by this name
+        # or: https://github.com/marketplace/actions/sticky-pull-request-comment
+        #        if: github.event_name == 'pull_request'
+        #        with:
+        #          recreate: true
+        #          path: code-coverage-results.md
+        # GITHUB_TOKEN is implicitly passed in
 
 #      - name: Create Coverage Badge
 #        # from: https://github.com/marketplace/actions/coverage-py-badge
