--- a/.github/workflows/check-cov.yml
+++ b/.github/workflows/check-cov.yml
@@ -20,9 +20,8 @@ on:
 
   workflow_dispatch:
 
-# permissions:
-  # pull-requests: write
-  # issues: write
+permissions:
+  pull-requests: write
 
 jobs:
   coverage:
