--- a/requirements/requirements_docs.txt
+++ b/requirements/requirements_docs.txt
@@ -6,10 +6,11 @@
 
 # used for generating docs
 # (Note: markdown-it-py==3.x for myst-parser 4.0.1)
+# (Note: sphinx 8.2.3. for furo 2025.9.25)
     furo==2025.9.25
     markdown-it-py==3.0.0
     myst-parser==4.0.1
-    Sphinx==9.0.1
+    Sphinx==8.2.3
     sphinxcontrib-mermaid==1.2.3
     sphinx-basic-ng==1.0.0b2
     sphinx_design==0.6.1
