--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -14,3 +14,4 @@
   click >= 8.2.1                                 # NOTE: non-async version
   colorama >= 0.4.6                              # on Windows, colorlog uses the latest colorama
   debugpy >= 1.8.13                              # can invoke via CLI
+  trio >= 0.32.0                                 # for asyncio IO since 0.54.0
